--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,17 @@
     <!-- Login & Register-->
     <string name="app_name">ShameApp</string>
     <string name="loginText">Login</string>
+    <string name="logoutText">Logout</string>
     <string name="registerText">Register</string>
+    <string name="passwordText">Password</string>
+    <string name="passwordRepeatText">Repeat password</string>
     <string name="loginIfText">Login if you have an account</string>
     <string name="registerIfText">Register if you do not have an account</string>
 
     <!-- Login -->
     <string name="search">Search</string>
-    <string name="toWatch">To watch</string>
-    <string name="watched">Watched</string>
+    <string name="toWatch">To watch list</string>
+    <string name="watched">Watched list</string>
 
     <string name="movies">Movies</string>
     <string name="people">People</string>
